--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "filter-search": "^1.2.1",
+    "hamburger-react": "^2.4.1",
     "react": "^17.0.2",
     "react-countup": "^6.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-scroll-up": "^1.3.7",
+    "react-scrolltop-button": "^0.1.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
